Code modifications,text file and readme